# irc-bot.rs

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  COPYING.txt  Cargo.toml  Makefile  README.md  RUST_VERSION.yaml  build.rs  config.json  config.yaml  rustfmt.toml  shell.nix
ci/: build.sh  examine-env.sh  pre-build.sh
data/quote/: example-1.yaml  example-2.yaml
doc/: impl_notes.mkd
scripts/ci/: build.sh  examine-env.sh  pre-build.sh
src/: core.rs  lib.rs  main.rs
src/core/: bot_cmd.rs  bot_cmd_handler.rs  config.rs  err.rs  handler.rs  irc_comm.rs  irc_msgs.rs  irc_send.rs  misc_traits.rs  mod.rs  modl_data.rs  modl_sys.rs  null_sink.rs  pkg_info.rs  reaction.rs  sandbox.rs  state.rs  trigger.rs
src/irc/: mod.rs
src/irc/client/: err.rs  mod.rs  msg_ctx.rs
src/irc/client/action/: mod.rs
src/irc/client/reaction/: mod.rs
src/irc/client/session/: mod.rs
src/irc/connection/: auto_threading.rs  err.rs  mod.rs
src/irc/connection/generic/: mod.rs
src/irc/connection/plaintext/: mod.rs
src/irc/err/: mod.rs
src/irc/message/: err.rs  mod.rs
src/modules/: default.rs  mod.rs  quote.rs  test.rs
src/util/: fmt.rs  lock.rs  mod.rs  regex.rs  yaml.rs
src/util/irc/: mod.rs
