[package]
name = "irc-bot"
version = "0.2.1"
authors = ["c74d <8573dd@gmail.com>"]
description = "A library for writing Internet Relay Chat (IRC) bots in Rust"
documentation = "https://docs.rs/irc-bot"
homepage = "https://docs.rs/crate/irc-bot"
repository = "https://github.com/8573/irc-bot.rs"
readme = "README.md"
keywords = ["irc", "internet-relay-chat", "internet_relay_chat", "bot", "bots"]
categories = ["network-programming"]
license = "Apache-2.0"

[dependencies]
clap = "2.32.0"
clockpro-cache = "0.1.6"
crossbeam-channel = "0.1.3"
custom_debug_derive = "0.1.3"
env_logger = "0.5.12"
error-chain = "0.12.0"
irc = "0.13.5"
itertools = "0.7.8"
lazy_static = "1.1.0"
log = "0.4.4"
quantiles = "0.7.1"
rand = "0.5.5"
rando = "0.2.0"
ref_slice = "1.1.1"
regex = "1.0.2"
serde = "1.0.74"
serde_derive = "1.0.74"
serde_yaml = "0.8.4"
smallbitvec = "2.1.1"
smallvec = {version = "0.6.5", features = ["serde", "std"]}
string_cache = "0.7.3"
strum = "0.10.0"
strum_macros = "0.10.0"
try_map = "0.3.1"
url = "1.7.1"
url_serde = "0.2.0"
uuid = {version = "0.6.5", features = ["v4"]}
walkdir = "2.2.2"
yaml-rust = "0.4.1"

[build-dependencies]
foreman = "0.4.0"

[dev-dependencies]
quickcheck = "0.6.2"
